--- a/paper/figures/figures.ipynb
+++ b/paper/figures/figures.ipynb
@@ -18,6 +18,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name, samples = get_samples('gauss_32')\n",
+    "logXs = samples.logX().values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "write_to_txt('data/logXs/gauss_32.txt', logXs)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 209,
    "metadata": {},
    "outputs": [
