new branch for reviewer changes

--- a/paper/figures/figures.ipynb
+++ b/paper/figures/figures.ipynb
@@ -18,21 +18,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "name, samples = get_samples('gauss_32')\n",
-    "logXs = samples.logX().values"
+    "dkls = {}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "write_to_txt('data/logXs/gauss_32.txt', logXs)"
+    "name, samples = get_samples('cauchy_84')\n",
+    "dkls[name] = samples.D_KL() "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'cauchy_85': 76.17846347858264,\n",
+       " 'cauchy_82': 21.72038931529883,\n",
+       " 'cauchy_83': 39.424475851934695,\n",
+       " 'cauchy_84': 57.11849802882677}"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dkls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name, samples = get_samples('correlated_6d')\n",
+    "write_to_txt(f'data/logLs/{name}.txt', [samples.logL.values, samples.logL_birth.values]) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[array([-3.60627379e+07, -3.20448689e+07, -3.19877845e+07, ...,\n",
+       "        -1.10296044e-05, -9.59150242e-06, -7.90034556e-06]),\n",
+       " array([           -inf,            -inf,            -inf, ...,\n",
+       "        -9.94178060e-05, -7.88289231e-05, -9.94178060e-05])]"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "read_from_txt(f'data/logLs/{name}.txt')"
    ]
   },
   {
@@ -695,7 +751,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4
  },
