--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -561,7 +561,7 @@ The method in general converges on a correct prediction of endpoint by about hal
 \par
 Further work can be done to experiment with more flexible basis functions for regression of the likelihood profile, so that it is less dependent on the Gaussian approximation.
 
-\section*{Code availability}
+\section*{Data availability}
 A package is in development to implement the endpoint prediction mechanism, for easy plug-in to existing implementations of nested sampling. The latest updates can be found at \href{https://github.com/zixiao-h/aeons}{github.com/zixiao-h/aeons}.
 
 \section*{Acknowledgements}
