--- a/paper/references.bib
+++ b/paper/references.bib
@@ -492,4 +492,29 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@article{Graff_2012,
+   title={BAMBI: blind accelerated multimodal Bayesian inference: BAMBI},
+   ISSN={0035-8711},
+   url={http://dx.doi.org/10.1111/j.1365-2966.2011.20288.x},
+   DOI={10.1111/j.1365-2966.2011.20288.x},
+   journal={Monthly Notices of the Royal Astronomical Society},
+   publisher={Oxford University Press (OUP)},
+   author={Graff, Philip and Feroz, Farhan and Hobson, Michael P. and Lasenby, Anthony},
+   year={2012},
+   month=jan, pages={no-no} }
 
+@article{nelder_mead,
+    author = {Nelder, J. A. and Mead, R.},
+    title = "{A Simplex Method for Function Minimization}",
+    journal = {The Computer Journal},
+    volume = {7},
+    number = {4},
+    pages = {308-313},
+    year = {1965},
+    month = {01},
+    abstract = "{A method is described for the minimization of a function of n variables, which depends on the comparison of function values at the (n + 1) vertices of a general simplex, followed by the replacement of the vertex with the highest value by another point. The simplex adapts itself to the local landscape, and contracts on to the final minimum. The method is shown to be effective and computationally compact. A procedure is given for the estimation of the Hessian matrix in the neighbourhood of the minimum, needed in statistical estimation problems.}",
+    issn = {0010-4620},
+    doi = {10.1093/comjnl/7.4.308},
+    url = {https://doi.org/10.1093/comjnl/7.4.308},
+    eprint = {https://academic.oup.com/comjnl/article-pdf/7/4/308/1013182/7-4-308.pdf},
+}
